src/objects/Campaign_Project_Event_Schedule__c.object
<CustomObject>
    <description>Campaign Project Event Schedule</description>
    <fields>
        <fullName>Campaign_Project__c</fullName>
        <label>Campaign Project</label>
        <referenceTo>Campaign_Project__c</referenceTo>
        <relationshipLabel>Campaign Project Event Schedule</relationshipLabel>
        <relationshipName>Campaign_Project_Event_Schedule</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <description>Event Date</description>
        <inlineHelpText>Event Date</inlineHelpText>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_End_Hour__c</fullName>
        <globalPicklist>Hour</globalPicklist>
        <label>Event End Hour</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <label>Event Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Start_Hour__c</fullName>
        <globalPicklist>Hour</globalPicklist>
        <label>Event Start Hour</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration__c</fullName>
        <description>Registration</description>
        <inlineHelpText>Registration</inlineHelpText>
        <label>Registration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Price__c</fullName>
        <description>Ticket price for that event schedule</description>
        <label>Ticket Price</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Campaign Project Event Schedule</label>
    <nameField>
        <displayFormat>CES-{0000000000}</displayFormat>
        <label>Campaign Project Event Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Project Event Schedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>